# fairmieten

./: .cursor-config.json  .dockerignore  .gitignore  Dockerfile  README.md  db (Kopie).sqlite3  db.sqlite.backup  db.sqlite3  docker-compose.yml  entrypoint.sh  locustfile.py  manage.py  package-lock.json  package.json  pyproject.toml  readme.md  tailwind.config.js
aggregation/: chart_utils.py  models.py  test_data.py  tests.py  urls.py  views.py
aggregation/migrations/: 0001_initial.py  0002_charts_model.py  0003_charts_x_label.py
aggregation/templates/: aggregation.html  chart.html  year_options.html
data/database/: db.sqlite3.backup
data/env_variables/: .env.template
fairmieten/: admin.py  apps.py  form_views.py  forms.py  insert_initial_data.py  models.py  test_data.py  view_utils.py  views.py  widgets.py
fairmieten/migrations/: 0001_initial.py  0002_charts.py  0002_vorgang_alter_item_vorgang_anzahl_kinder_and_more.py  0003_remove_charts_description.py  0003_rename_sprache_vorgang_sprache_item.py  0004_alter_vorgangstyp_id.py  0004_remove_vorgang_diskriminierungsart.py  0005_person_remove_vorgang_plz_and_more.py  0005_vorgang_ander_sprache.py  0006_remove_charts_name_remove_charts_url_and_more.py  0006_rename_ander_sprache_vorgang_andere_sprache.py  0006_vorgang_kontakaufnahme_durch_item_and_more.py  0007_alter_charts_id_alter_diskriminierung_id_and_more.py  0007_charts_name.py  0007_vorgang_anderer_bereich_diskriminierung_and_more.py  0008_remove_vorgang_person_person_vorgang.py  (+23 more)
main/: .env  .env.template  models.py  urls.py  wsgi.py
(+59 files in other folders)
