[tool.poetry]
name = "fm2"
version = "0.1.0"
description = "Django Project"
authors = ["grischan <grischan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
whitenoise = "^6.7.0"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
mypy = "^1.11.2"
ruff = "^0.6.4"
django-stubs = "^5.0.4"
faker = "^28.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
